P5 E-Learning/force-app/main/default/objects/Student_Trail__c/Student_Trail__c.object-meta.xml
<CustomObject>
    <label>Student-Trail</label>
    <nameField>
        <label>Student-Trail name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students-Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>