P5 E-Learning/force-app/main/default/objects/Student_Trail__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Students-Trails</relationshipLabel>
    <relationshipName>Students_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>